tests/rosetta/out/Java/bitmap-ppm-conversion-through-a-pipe.error
javac error: exit status 1
/tmp/TestMochiToJavabitmap-ppm-conversion-through-a-pipe2835536720/001/BitmapPpmConversionThroughAPipe.java:94: error: integer number too large
        return (seed * 1664525 + 1013904223) % 2147483648;
                                               ^
1 error
